<resources>
    <string name="app_name">Hello Squirrel</string>

    <string name="first_name">Andrei</string>
    <string name="last_name">Kondrashov</string>
    <string name="full_name">%s %s</string>

    <string name="profile_bio_text">Hello! I\'m Andrei and I\'m taking my master\'s degree in Computer Science.\nI\'m interested in full-stack web development! Nice to meet you!</string>

    <string name="profile_hobby_header_text">Greatest Hobbies of All Time:</string>
    <string name="profile_hobby_first_text">🥇 Swimming</string>
    <string name="profile_hobby_second_text">🥈 Playing guitar</string>
    <string name="profile_hobby_third_text">🥉 Gaming</string>
</resources>